Change dark mode input border and fix dark mode focus ring being invisible
(taken from https://github.com/medienhaus/medienhaus-spaces/pull/133/files#diff-f9dadcbab298b4b25cda39f127b3f0a5f50de5fdd636369b0377c974151d72c9R68)

--- a/assets/_globalCss.css
+++ b/assets/_globalCss.css
@@ -23,7 +23,7 @@
         --destructive: 348 78% 50%;
         --destructive-foreground: 348 98% 70%;
         --border: 0 0% 90%;
-        --input: 0 0% 90%;
+        --input: 0 0% 50%;
         --ring: 0 0% 0%;
         --radius: 0.25rem;
     }
@@ -65,8 +65,8 @@
         --destructive: 348 78% 50%;
         --destructive-foreground: 348 98% 70%;
         --border: 0 0% 90%;
-        --input: 0 0% 90%;
-        --ring: 0 0% 0%;
+        --input: 0 0% 50%;
+        --ring: 0 0% 100%;
 
         /* color definitions (legacy support) */
         --color-background: hsl(var(--background));
